Finalized the report
Signed-off-by: Sandy Urazayev <ctu@ku.edu>

--- a/report/Quash_report.org
+++ b/report/Quash_report.org
@@ -12,6 +12,25 @@
 #+author: Sandy Urazayev, Jacob McNamee
 #+date: 286; 12021 H.E.
 #+email: University of Kansas (ctu@ku.edu)
+
+* Building and running
+  You have to have a proper go 1.17 installation to build it. Simply run
+  #+begin_src sh
+    go get -u -v ./...
+  #+end_src
+  to get all the dependencies and then run
+  #+begin_src sh
+    go build -v
+  #+end_src
+  to build it. You will get an executable =quash= in your directory. Simply run
+  it. We also provide a makefile, running =make= will do it all for you.
+
+  To execute quash, type in =./quash= or run
+  #+begin_src sh
+    go install ./...
+  #+end_src
+  to run it globally by simply invoking =quash= anywhere on your system. The
+  binary is fully independent.
 * Quash
   Quash is the best shell in the entirety of our existence. Let's walk through
   how it's built!
@@ -269,3 +288,145 @@
    at 1 and =cmd= is the entire text of the previous command. This line is printed
    for every previous valid command, sorted by number. 
 * Arrow Keys
+  We support arrow key movements! We do this by manually catching keyboard
+  interrupts from =/dev/tty= with =keyboard= interface and then depending on each
+  key pressed, we decide on what to do. This actually changes the input
+  logistics completely, as in when the user presses a key, it doesn't get
+  flushed onto the screen, we swallow it and must decide what to do with it. We
+  catch all the special keys and then print all printable characters we
+  caught. The subroutine for it looks like the following
+  #+begin_src go
+    // takeInput reads a newline-terminated input from a bufio reader
+    func takeInput(reader *bufio.Reader) string {
+            if err := keyboard.Open(); err != nil {
+                    panic(err)
+            }
+            defer func() {
+                    _ = keyboard.Close()
+            }()
+    
+            cmdNum := len(goodHistory)
+            var readCharacter rune
+            input := ""
+            curPosition := 0
+    
+            for {
+                    char, key, err := keyboard.GetKey()
+                    if err != nil {
+                            quashError("bad input: %s", err.Error())
+                    }
+                    readCharacter = char
+    
+                    // See what key we actually pressed, I tried doing switch
+                    // but it works kinda wonky. If statements forever <3
+                    // --------------------------------------------------
+    
+                    // On enter, flush a newline and return whatever we have
+                    if key == keyboard.KeyEnter {
+                            fmt.Fprint(os.Stdout, NEWLINE)
+                            return input + string(char)
+                    }
+                    // On Ctrl-D or Escape just close the shell altogether
+                    if key == keyboard.KeyEsc {
+                            if isTerminal {
+                                    fmt.Fprint(os.Stdout, NEWLINE)
+                            }
+                            exit(nil)
+                    }
+                    // Only exit on Ctrl-D if input is empty
+                    if key == keyboard.KeyCtrlD {
+                            if curPosition != 0 || len(input) != 0 {
+                                    continue
+                            }
+                            if isTerminal {
+                                    fmt.Fprint(os.Stdout, NEWLINE)
+                            }
+                            exit(nil)
+                    }
+                    // On a space just set readCharacter to a space run
+                    if key == keyboard.KeySpace {
+                            readCharacter = ' '
+                    }
+                    // On backspace, move cursor to the left, clean character,
+                    // and move the cursor again to the left. Delete last input element
+                    if key == keyboard.KeyBackspace || key == keyboard.KeyBackspace2 {
+                            // If cursor is already at the home position, don't move
+                            if curPosition < 1 {
+                                    continue
+                            }
+                            fmt.Fprintf(os.Stdout, "\b \b")
+                            input = input[:curPosition-1]
+                            curPosition--
+                            continue
+                    }
+                    // On arrow up press, clean out the terminal and replace the user input
+                    // with whatever previous good command we can find. Works on multiple
+                    // arrow up key presses too
+                    if key == keyboard.KeyArrowUp {
+                            if len(goodHistory) < 1 {
+                                    continue
+                            }
+                            // Clear the input first
+                            resetTermInput(len(input))
+                            cmdNum = prevCmdNum(cmdNum)
+                            input = printOldGoodCommand(cmdNum)
+                            curPosition = len(input)
+                            continue
+                    }
+                    // On arrow down press, clean out the terminal and replace with whatever
+                    // command came after. Only makes sense if run after one or mory presses
+                    // of the arrow up key. On the bottom it will set user input to just clean
+                    if key == keyboard.KeyArrowDown {
+                            if len(goodHistory) < 1 {
+                                    continue
+                            }
+                            resetTermInput(len(input))
+                            // If at the end of history, just clear the input
+                            if cmdNum >= len(goodHistory)-1 {
+                                    input = ""
+                                    cmdNum = len(goodHistory)
+                                    curPosition = 0
+                                    continue
+                            }
+                            // Get the later good command
+                            cmdNum = nextCmdNum(cmdNum)
+                            input = printOldGoodCommand(cmdNum)
+                            curPosition = len(input)
+                            continue
+                    }
+                    // Ignore left and right arrow keys
+                    if key == keyboard.KeyArrowLeft || key == keyboard.KeyArrowRight {
+                            continue
+                    }
+                    // Send kill signals if ctrl is encountered or clear the input
+                    if key == keyboard.KeyCtrlC {
+                            // Don't do anything if we have an empty command
+                            if curPosition == 0 && len(input) == 0 {
+                                    sigintChan <- syscall.SIGINT
+                                    continue
+                            }
+                            fmt.Fprintf(os.Stdout, "\033[41m^C\033[0m\n")
+                            input = ""
+                            curPosition = 0
+                            greet()
+                            continue
+                    }
+                    // Ctrl-L should clear the screen
+                    if key == keyboard.KeyCtrlL {
+                            executeInput("clear")
+                            greet()
+                            // Reprint whatever we had before
+                            fmt.Fprintf(os.Stdout, "%s", input)
+                            continue
+                    }
+                    // If the character is NOT printable, skip saving it
+                    if !unicode.IsPrint(readCharacter) {
+                            continue
+                    }
+                    // Print the character that we swallowed up and append to input
+                    fmt.Fprint(os.Stdout, string(readCharacter))
+                    input += string(readCharacter)
+                    curPosition = len(input)
+            }
+    }l
+  #+end_src
