--- a/report/Quash_report.tex
+++ b/report/Quash_report.tex
@@ -1,4 +1,4 @@
-% Created 2021-10-20 Wed 20:55
+% Created 2021-10-21 Thu 23:45
 % Intended LaTeX compiler: xelatex
 \documentclass[12pt]{article}
 \usepackage{graphicx}
@@ -85,12 +85,32 @@
 \maketitle
 \tableofcontents
 
+
+\section{Building and running}
+\label{sec:org419df39}
+You have to have a proper go 1.17 installation to build it. Simply run
+\begin{minted}[frame=lines,fontsize=\footnotesize,obeytabs,mathescape,numbersep=5pt,numbersep=2mm,xleftmargin=0.25in]{sh}
+go get -u -v ./...
+\end{minted}
+to get all the dependencies and then run
+\begin{minted}[frame=lines,fontsize=\footnotesize,obeytabs,mathescape,numbersep=5pt,numbersep=2mm,xleftmargin=0.25in]{sh}
+go build -v
+\end{minted}
+to build it. You will get an executable \texttt{quash} in your directory. Simply run
+it. We also provide a makefile, running \texttt{make} will do it all for you.
+
+To execute quash, type in \texttt{./quash} or run
+\begin{minted}[frame=lines,fontsize=\footnotesize,obeytabs,mathescape,numbersep=5pt,numbersep=2mm,xleftmargin=0.25in]{sh}
+go install ./...
+\end{minted}
+to run it globally by simply invoking \texttt{quash} anywhere on your system. The
+binary is fully independent.
 \section{Quash}
-\label{sec:orgea234b1}
+\label{sec:org930372a}
 Quash is the best shell in the entirety of our existence. Let's walk through
 how it's built!
 \section{Forking and Executing}
-\label{sec:orge5713eb}
+\label{sec:orgf6a981b}
 Quash is implemented in \href{https://golang.org}{Go}, which itself is a garbage-collected language that
 runs threads to maintain the language runtime. When we want to fork from a Go
 application, the forking will only spawn a copy of the thread that initiated
@@ -116,7 +136,7 @@ current active directory where we are located, \texttt{Env} is a slice of string
 contains our environmental variables, \texttt{Files} is a slice of unsigned file
 descriptor pointer values, and \texttt{Sys} is a struct to pass additional options.
 \section{\texttt{PATH}}
-\label{sec:org0c24579}
+\label{sec:org00b956b}
 In order to run executables, we have to have a list of directors where we
 would look for one. For this, we have our \texttt{PATH} environmental variable. Quash
 solves this problem rather simply by going through all the directories in \texttt{PATH}
@@ -165,7 +185,7 @@ Notice that the function would return the full path for a binary (example if
 \texttt{/usr/bin/echo}). \texttt{getenv} and \texttt{setenv} are our user-defined functions that access
 the global variable \texttt{myEnv}, which holds all of our active environmental variables.
 \section{Pipes}
-\label{sec:orgcb1e036}
+\label{sec:orgedec963}
 Quash allows the user to sequentially run multiple programs while passing the
 output data from one program to the input data of the next program in the
 sequence. This is accomplished with the use of pipes. When Quash receives a
@@ -259,7 +279,7 @@ Note that in C you would have to also close excess pipes between the fork and
 execute function calls in the child process, but in Go we only assigned the
 child process the necessary pipes, so no additional pipes need to be closed. 
 \section{Background Processes}
-\label{sec:org84278cc}
+\label{sec:org13fbdd0}
 Like many other shell programs, Quash has the ability to execute programs in
 either the foreground or the background. A program or group of programs
 running in the background is called a job. A program is designated to run in
@@ -287,21 +307,21 @@ each job will print a message when they are first created and when they
 terminate. If one process within a pipe chain terminates with an error,
 the job will terminate. 
 \section{Builtins}
-\label{sec:orga162de2}
+\label{sec:org3598adc}
 Quash has a handful of pre-defined keywords that perform special functionality
 for the user. These commands are: \texttt{exit}, \texttt{quit}, \texttt{set}, \texttt{cd}, \texttt{kill}, \texttt{jobs}, and
 \texttt{history}. These built in functions cannot be executed as part of a chain of
 processes, as they are not themselves process. Instead they are functions that
 manipulate aspects of the shell, such as changing the environment. 
 \subsection{\texttt{quit} / \texttt{exit}}
-\label{sec:orga756e6f}
+\label{sec:orge3d3828}
 \texttt{quit} and \texttt{exit} are aliases for the same function within Quash. This function
 terminates Quash.
 \begin{minted}[frame=lines,fontsize=\footnotesize,obeytabs,mathescape,numbersep=5pt,numbersep=2mm,xleftmargin=0.25in]{sh}
 Usage: quit or exit
 \end{minted}
 \subsection{\texttt{set}}
-\label{sec:orgf4728bd}
+\label{sec:orgccec4c4}
 \texttt{set} allows the user to change environment variables, such as the current
 working PATH. The initial variables and values are set by the OS. \texttt{set} can
 also add a new variable to Quash’s environment (but not the OS’s
@@ -312,7 +332,7 @@ Usage: set variable
 where \texttt{variable} is the name of the variable to add or update, and value is the
 value to set variable as.
 \subsection{\texttt{cd}}
-\label{sec:org273c3a0}
+\label{sec:org034ebc4}
 \texttt{cd} stands for change directory. cd changes the current directory that Quash
 is working within.
 \begin{minted}[frame=lines,fontsize=\footnotesize,obeytabs,mathescape,numbersep=5pt,numbersep=2mm,xleftmargin=0.25in]{sh}
@@ -322,7 +342,7 @@ where \texttt{directory} is an absolute or relative path to change to. If no
 directory is specified, then cd will change the directory to the \texttt{\$HOME}
 directory specified in Quash’s environment.
 \subsection{\texttt{kill}}
-\label{sec:org83991bb}
+\label{sec:orgbfa223e}
 \texttt{kill} allows the user to manually send signals to a currently executing
 job. This is especially useful for sending signals to forcefully end the job,
 hence the name \texttt{kill}.
@@ -333,7 +353,7 @@ where \texttt{signal} is the number of the signal you wish to send (check your O
 see what number each signal corresponds to) and \texttt{jid} is the job identification
 number corresponding to the job you wish to signal.
 \subsection{\texttt{jobs}}
-\label{sec:org2f06d88}
+\label{sec:orgedc422f}
 \texttt{jobs} prints all currently executing background jobs.
 \begin{minted}[frame=lines,fontsize=\footnotesize,obeytabs,mathescape,numbersep=5pt,numbersep=2mm,xleftmargin=0.25in]{sh}
 Usage: jobs
@@ -343,7 +363,7 @@ number for the job and \texttt{pid} is the process identification number for the
 currently executing process within the job. This line is printed for each
 currently running job, sorted by \texttt{jid}.
 \subsection{\texttt{history}}
-\label{sec:orgb5c19d0}
+\label{sec:org1fdf7a4}
 \texttt{history} prints a list of all previous valid commands used within the current
 execution of Quash. If the command failed, such as misspelling an executable
 name, the command will not be added to the history.
@@ -354,5 +374,147 @@ Output: \texttt{number cmd} where \texttt{number} is the index of the command st
 at 1 and \texttt{cmd} is the entire text of the previous command. This line is printed
 for every previous valid command, sorted by number. 
 \section{Arrow Keys}
-\label{sec:org411da29}
+\label{sec:org2b245c8}
+We support arrow key movements! We do this by manually catching keyboard
+interrupts from \texttt{/dev/tty} with \texttt{keyboard} interface and then depending on each
+key pressed, we decide on what to do. This actually changes the input
+logistics completely, as in when the user presses a key, it doesn't get
+flushed onto the screen, we swallow it and must decide what to do with it. We
+catch all the special keys and then print all printable characters we
+caught. The subroutine for it looks like the following
+\begin{minted}[frame=lines,fontsize=\footnotesize,obeytabs,mathescape,numbersep=5pt,numbersep=2mm,xleftmargin=0.25in]{go}
+// takeInput reads a newline-terminated input from a bufio reader
+func takeInput(reader *bufio.Reader) string {
+        if err := keyboard.Open(); err != nil {
+                panic(err)
+        }
+        defer func() {
+                _ = keyboard.Close()
+        }()
+
+        cmdNum := len(goodHistory)
+        var readCharacter rune
+        input := ""
+        curPosition := 0
+
+        for {
+                char, key, err := keyboard.GetKey()
+                if err != nil {
+                        quashError("bad input: %s", err.Error())
+                }
+                readCharacter = char
+
+                // See what key we actually pressed, I tried doing switch
+                // but it works kinda wonky. If statements forever <3
+                // --------------------------------------------------
+
+                // On enter, flush a newline and return whatever we have
+                if key == keyboard.KeyEnter {
+                        fmt.Fprint(os.Stdout, NEWLINE)
+                        return input + string(char)
+                }
+                // On Ctrl-D or Escape just close the shell altogether
+                if key == keyboard.KeyEsc {
+                        if isTerminal {
+                                fmt.Fprint(os.Stdout, NEWLINE)
+                        }
+                        exit(nil)
+                }
+                // Only exit on Ctrl-D if input is empty
+                if key == keyboard.KeyCtrlD {
+                        if curPosition != 0 || len(input) != 0 {
+                                continue
+                        }
+                        if isTerminal {
+                                fmt.Fprint(os.Stdout, NEWLINE)
+                        }
+                        exit(nil)
+                }
+                // On a space just set readCharacter to a space run
+                if key == keyboard.KeySpace {
+                        readCharacter = ' '
+                }
+                // On backspace, move cursor to the left, clean character,
+                // and move the cursor again to the left. Delete last input element
+                if key == keyboard.KeyBackspace || key == keyboard.KeyBackspace2 {
+                        // If cursor is already at the home position, don't move
+                        if curPosition < 1 {
+                                continue
+                        }
+                        fmt.Fprintf(os.Stdout, "\b \b")
+                        input = input[:curPosition-1]
+                        curPosition--
+                        continue
+                }
+                // On arrow up press, clean out the terminal and replace the user input
+                // with whatever previous good command we can find. Works on multiple
+                // arrow up key presses too
+                if key == keyboard.KeyArrowUp {
+                        if len(goodHistory) < 1 {
+                                continue
+                        }
+                        // Clear the input first
+                        resetTermInput(len(input))
+                        cmdNum = prevCmdNum(cmdNum)
+                        input = printOldGoodCommand(cmdNum)
+                        curPosition = len(input)
+                        continue
+                }
+                // On arrow down press, clean out the terminal and replace with whatever
+                // command came after. Only makes sense if run after one or mory presses
+                // of the arrow up key. On the bottom it will set user input to just clean
+                if key == keyboard.KeyArrowDown {
+                        if len(goodHistory) < 1 {
+                                continue
+                        }
+                        resetTermInput(len(input))
+                        // If at the end of history, just clear the input
+                        if cmdNum >= len(goodHistory)-1 {
+                                input = ""
+                                cmdNum = len(goodHistory)
+                                curPosition = 0
+                                continue
+                        }
+                        // Get the later good command
+                        cmdNum = nextCmdNum(cmdNum)
+                        input = printOldGoodCommand(cmdNum)
+                        curPosition = len(input)
+                        continue
+                }
+                // Ignore left and right arrow keys
+                if key == keyboard.KeyArrowLeft || key == keyboard.KeyArrowRight {
+                        continue
+                }
+                // Send kill signals if ctrl is encountered or clear the input
+                if key == keyboard.KeyCtrlC {
+                        // Don't do anything if we have an empty command
+                        if curPosition == 0 && len(input) == 0 {
+                                sigintChan <- syscall.SIGINT
+                                continue
+                        }
+                        fmt.Fprintf(os.Stdout, "\033[41m^C\033[0m\n")
+                        input = ""
+                        curPosition = 0
+                        greet()
+                        continue
+                }
+                // Ctrl-L should clear the screen
+                if key == keyboard.KeyCtrlL {
+                        executeInput("clear")
+                        greet()
+                        // Reprint whatever we had before
+                        fmt.Fprintf(os.Stdout, "%s", input)
+                        continue
+                }
+                // If the character is NOT printable, skip saving it
+                if !unicode.IsPrint(readCharacter) {
+                        continue
+                }
+                // Print the character that we swallowed up and append to input
+                fmt.Fprint(os.Stdout, string(readCharacter))
+                input += string(readCharacter)
+                curPosition = len(input)
+        }
+}l
+\end{minted}
 \end{document}
