Final report updates
Signed-off-by: Sandy Urazayev <ctu@ku.edu>

--- a/report/Quash_report.tex
+++ b/report/Quash_report.tex
@@ -1,4 +1,4 @@
-% Created 2021-10-21 Thu 23:45
+% Created 2021-10-21 Thu 23:47
 % Intended LaTeX compiler: xelatex
 \documentclass[12pt]{article}
 \usepackage{graphicx}
@@ -86,8 +86,11 @@
 \tableofcontents
 
 
+\section{Authors}
+\label{sec:org745cfa9}
+Made with ❤️ by Sandy Urazayev and Jacob McNamee.
 \section{Building and running}
-\label{sec:org419df39}
+\label{sec:org3a8fb11}
 You have to have a proper go 1.17 installation to build it. Simply run
 \begin{minted}[frame=lines,fontsize=\footnotesize,obeytabs,mathescape,numbersep=5pt,numbersep=2mm,xleftmargin=0.25in]{sh}
 go get -u -v ./...
@@ -106,11 +109,11 @@ go install ./...
 to run it globally by simply invoking \texttt{quash} anywhere on your system. The
 binary is fully independent.
 \section{Quash}
-\label{sec:org930372a}
+\label{sec:org7a3a191}
 Quash is the best shell in the entirety of our existence. Let's walk through
 how it's built!
 \section{Forking and Executing}
-\label{sec:orgf6a981b}
+\label{sec:org2e68f32}
 Quash is implemented in \href{https://golang.org}{Go}, which itself is a garbage-collected language that
 runs threads to maintain the language runtime. When we want to fork from a Go
 application, the forking will only spawn a copy of the thread that initiated
@@ -136,7 +139,7 @@ current active directory where we are located, \texttt{Env} is a slice of string
 contains our environmental variables, \texttt{Files} is a slice of unsigned file
 descriptor pointer values, and \texttt{Sys} is a struct to pass additional options.
 \section{\texttt{PATH}}
-\label{sec:org00b956b}
+\label{sec:org99cf805}
 In order to run executables, we have to have a list of directors where we
 would look for one. For this, we have our \texttt{PATH} environmental variable. Quash
 solves this problem rather simply by going through all the directories in \texttt{PATH}
@@ -185,7 +188,7 @@ Notice that the function would return the full path for a binary (example if
 \texttt{/usr/bin/echo}). \texttt{getenv} and \texttt{setenv} are our user-defined functions that access
 the global variable \texttt{myEnv}, which holds all of our active environmental variables.
 \section{Pipes}
-\label{sec:orgedec963}
+\label{sec:orgf5a3080}
 Quash allows the user to sequentially run multiple programs while passing the
 output data from one program to the input data of the next program in the
 sequence. This is accomplished with the use of pipes. When Quash receives a
@@ -279,7 +282,7 @@ Note that in C you would have to also close excess pipes between the fork and
 execute function calls in the child process, but in Go we only assigned the
 child process the necessary pipes, so no additional pipes need to be closed. 
 \section{Background Processes}
-\label{sec:org13fbdd0}
+\label{sec:org03d3b3e}
 Like many other shell programs, Quash has the ability to execute programs in
 either the foreground or the background. A program or group of programs
 running in the background is called a job. A program is designated to run in
@@ -307,21 +310,21 @@ each job will print a message when they are first created and when they
 terminate. If one process within a pipe chain terminates with an error,
 the job will terminate. 
 \section{Builtins}
-\label{sec:org3598adc}
+\label{sec:org0a039c7}
 Quash has a handful of pre-defined keywords that perform special functionality
 for the user. These commands are: \texttt{exit}, \texttt{quit}, \texttt{set}, \texttt{cd}, \texttt{kill}, \texttt{jobs}, and
 \texttt{history}. These built in functions cannot be executed as part of a chain of
 processes, as they are not themselves process. Instead they are functions that
 manipulate aspects of the shell, such as changing the environment. 
 \subsection{\texttt{quit} / \texttt{exit}}
-\label{sec:orge3d3828}
+\label{sec:org1c00ca1}
 \texttt{quit} and \texttt{exit} are aliases for the same function within Quash. This function
 terminates Quash.
 \begin{minted}[frame=lines,fontsize=\footnotesize,obeytabs,mathescape,numbersep=5pt,numbersep=2mm,xleftmargin=0.25in]{sh}
 Usage: quit or exit
 \end{minted}
 \subsection{\texttt{set}}
-\label{sec:orgccec4c4}
+\label{sec:orgb639719}
 \texttt{set} allows the user to change environment variables, such as the current
 working PATH. The initial variables and values are set by the OS. \texttt{set} can
 also add a new variable to Quash’s environment (but not the OS’s
@@ -332,7 +335,7 @@ Usage: set variable
 where \texttt{variable} is the name of the variable to add or update, and value is the
 value to set variable as.
 \subsection{\texttt{cd}}
-\label{sec:org034ebc4}
+\label{sec:org94fac57}
 \texttt{cd} stands for change directory. cd changes the current directory that Quash
 is working within.
 \begin{minted}[frame=lines,fontsize=\footnotesize,obeytabs,mathescape,numbersep=5pt,numbersep=2mm,xleftmargin=0.25in]{sh}
@@ -342,7 +345,7 @@ where \texttt{directory} is an absolute or relative path to change to. If no
 directory is specified, then cd will change the directory to the \texttt{\$HOME}
 directory specified in Quash’s environment.
 \subsection{\texttt{kill}}
-\label{sec:orgbfa223e}
+\label{sec:orgad956c1}
 \texttt{kill} allows the user to manually send signals to a currently executing
 job. This is especially useful for sending signals to forcefully end the job,
 hence the name \texttt{kill}.
@@ -353,7 +356,7 @@ where \texttt{signal} is the number of the signal you wish to send (check your O
 see what number each signal corresponds to) and \texttt{jid} is the job identification
 number corresponding to the job you wish to signal.
 \subsection{\texttt{jobs}}
-\label{sec:orgedc422f}
+\label{sec:org910488c}
 \texttt{jobs} prints all currently executing background jobs.
 \begin{minted}[frame=lines,fontsize=\footnotesize,obeytabs,mathescape,numbersep=5pt,numbersep=2mm,xleftmargin=0.25in]{sh}
 Usage: jobs
@@ -363,7 +366,7 @@ number for the job and \texttt{pid} is the process identification number for the
 currently executing process within the job. This line is printed for each
 currently running job, sorted by \texttt{jid}.
 \subsection{\texttt{history}}
-\label{sec:org1fdf7a4}
+\label{sec:org4afe524}
 \texttt{history} prints a list of all previous valid commands used within the current
 execution of Quash. If the command failed, such as misspelling an executable
 name, the command will not be added to the history.
@@ -374,7 +377,7 @@ Output: \texttt{number cmd} where \texttt{number} is the index of the command st
 at 1 and \texttt{cmd} is the entire text of the previous command. This line is printed
 for every previous valid command, sorted by number. 
 \section{Arrow Keys}
-\label{sec:org2b245c8}
+\label{sec:org900f852}
 We support arrow key movements! We do this by manually catching keyboard
 interrupts from \texttt{/dev/tty} with \texttt{keyboard} interface and then depending on each
 key pressed, we decide on what to do. This actually changes the input
