--- a/report/Quash_report.org
+++ b/report/Quash_report.org
@@ -13,6 +13,8 @@
 #+date: 286; 12021 H.E.
 #+email: University of Kansas (ctu@ku.edu)
 
+* Authors
+  Made with ❤️ by Sandy Urazayev and Jacob McNamee.
 * Building and running
   You have to have a proper go 1.17 installation to build it. Simply run
   #+begin_src sh
